# DataBrain

./: README.md  pyproject.toml  restart.sh
DataBrain/: __init__.py  app.py  spider.py
DataBrain/api/: __init__.py
DataBrain/api/job/: __init__.py  lagou.py
DataBrain/charts/job/: __init__.py  lagou.py
DataBrain/core/: exceptions.py  setting.py
DataBrain/crawler/: __init__.py  base_crawler.py  boss.py  lagou.py
DataBrain/libs/: __init__.py  redprint.py
DataBrain/models/: __init__.py  job.py  lagou.py
DataSource/: main.py
DataSource/core/: __init__.py  config.py
DataSource/crawler/: __init__.py  lagou.py
DataSource/data_source/: __init__.py  lagou.py
DataSource/models/: __init__.py  lagou.py
DataSource/parser/: __init__.py  lagou.py
DataSource/utils/: __init__.py  recorder.py
config/ngix/: DataBrain.conf
web/: index.html
