[tool.poetry]
name = "databrain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pyquery = "^1.4.1"
pyecharts = "^1.8.1"
loguru = "^0.5.3"
selenium = "^3.141.0"
mongoengine = "^0.20.0"
flask_cors = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
